[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/ShopPanel.gd" type="Script" id=1]
[ext_resource path="res://tres/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://tres/number_font_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/icons/carrot.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ShopPanel" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 512, 512 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 512, 512 )

[node name="Margin" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 156 )
mouse_filter = 2
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 500.0
margin_bottom = 500.0

[node name="ItemList" type="ItemList" parent="Panel/Margin/VBox"]
margin_right = 488.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Item 0", null, false, "Item 1", null, false ]
fixed_icon_size = Vector2( 64, 64 )

[node name="Description" type="RichTextLabel" parent="Panel/Margin/VBox"]
margin_top = 292.0
margin_right = 488.0
margin_bottom = 420.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true

[node name="VBox" type="HBoxContainer" parent="Panel/Margin/VBox"]
margin_top = 424.0
margin_right = 488.0
margin_bottom = 488.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinIcon" type="TextureRect" parent="Panel/Margin/VBox/VBox"]
margin_right = 48.0
margin_bottom = 64.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="CoinLabel" type="Label" parent="Panel/Margin/VBox/VBox"]
margin_left = 52.0
margin_right = 180.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 64 )
custom_fonts/font = ExtResource( 4 )
text = "0"
valign = 1

[node name="Buy" type="Button" parent="Panel/Margin/VBox/VBox"]
margin_left = 360.0
margin_right = 488.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Buy"

[connection signal="pressed" from="." to="." method="_on_ShopPage_pressed"]
[connection signal="item_selected" from="Panel/Margin/VBox/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Panel/Margin/VBox/VBox/Buy" to="." method="_on_Buy_pressed"]
